--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -80,11 +80,9 @@ h1 a {
 }
 
 .social-networks li {
-    display: table-cell;
+    display: table-row;
     list-style-type: none;
-    padding-left: 80px;
-    padding-top: 32px;
-    height: 64px;
+    height: 80px;
 }
 
 .social-networks .site-image,
